src/main/java/com/example/lottery/Util/error/UpdateException.java
package com.example.lottery.Util.error;

public class UpdateException extends Exception {
    public UpdateException(String message) {
        super(message);
    }
}
